Основное задание: начинаем вёрстку с препроцессором

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,16 @@
-body { 
-  background: ; 
+@import "page-header.less";
+@import "main.less";
+@import "programs.less";
+@import "method.less";
+@import "social.less";
+@import "copyright.less";
+@import "product.less";
+@import "product-list.less";
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
