--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -1,5 +1,8 @@
 .page-header {
-  font-family: Oswald Regular;
+  font-family: "Oswald Regular", Arial, sans-serif;
   background-color: #ffffff;
   color: #111111;
+  &__logo {
+    
+  }
 }
