Основное задание: начинаем вёрстку с препроцессором*2

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,13 @@
+@import "main";
+@import "programs";
 @import "method";
 @import "social";
 @import "copyright";
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
