--- a/source/less/method.less
+++ b/source/less/method.less
@@ -5,14 +5,29 @@
     color: #111111;
   }
   &__list {
-    list-style: none;
+    font-family: "Arial";
     font-size: 14px;
     line-height: 18px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
   }
 }
 
 .adv-list {
   &__item-picture {
     background-color: #68b738;
+  }
+  &__item {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__item-picture {
+    margin-right: 20px;
+    margin-bottom: 20px;
+  }
+  &__item-description {
+    margin: 0;
+    padding: 0;
   }
 }
