--- a/source/less/product-list.less
+++ b/source/less/product-list.less
@@ -16,12 +16,47 @@
     font-size: 12px;
     line-height: 16px;
     color: #444444;
+    margin-bottom: 23px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  &__description-row {
+    display: flex;
+    justify-content: space-between;
   }
   &__button {
+    text-decoration: none;  
+  }
+  &__button-name {
     font-size: 16px;
     line-height: 20px;
     color: #ffffff;
     text-transform: uppercase;
     background-color: #68b738;
+    text-align: center;
+    padding: 13px 0px;
+  }
+  &__button--more-name {
+    color: #444444;
+    text-transform: uppercase;
+    background-color: #f2f2f2;
+    text-decoration-line: none;
+    text-align: center;
+    padding: 13px 0px;
+  }
+  &__link {
+    text-decoration: none;
+  }
+  &__item {
+    display: flex;
+  }
+  &item-block {
+    display: flex;
+    flex-direction: column;
+  }
+  &__item--more {
+    flex-direction: column;
+    align-items: center;
   }
 }
