--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -1,4 +1,16 @@
 .programs {
+  &__item {
+    display: flex;
+    flex-direction: column;
+    background-color: #f2f2f2;
+    padding: 22px 36px 22px 21px;
+    margin-bottom: 20px;
+  }
+  &__item-block {
+    display: flex;
+    align-items: center;
+    margin: 0;
+  }
   &__item-name {
     font-size: 24px;
     line-height: 37px;
@@ -9,9 +21,12 @@
     background-color: #68b738;
   }
   &__item-description {
+    font-family: "Arial";
     font-size: 14px;
     line-height: 18px;
     color: #444444;
+    margin: 0;
+    margin-bottom: 15px;
   }
   &__button {
     font-size: 16px;
@@ -19,5 +34,14 @@
     color: #111111;
     text-transform: uppercase;
     text-decoration: none;
+    margin: 0;
+    margin-top: 12px;
   }
+}
+.round {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #68b738;
+  margin-right: 20px;
 }
